# robot-to-onboard

./: .gitignore  NOTES  README.md  START_NOTES_TODO
base_ardu/BaseControl/: BaseControl.ino
base_ardu/BaseControl/v1/: BaseControl.ino
base_ardu/BaseControl/v2/: NOTES  platformio.ini
base_ardu/BaseControl/v2/src/: BaseControl.cpp
base_ardu/catkin_ws/: .gitignore
base_ardu/catkin_ws/src/: README.markdown
base_ardu/catkin_ws/src/bot_sensors/: CMakeLists.txt  README.md  package.xml
base_ardu/catkin_ws/src/bot_sensors/ultrasound/: ultrasound.launch  ultrasound.py
base_ardu/catkin_ws/src/uollibot_base/: CMakeLists.txt  NOTES  package.xml  setup.py
base_ardu/catkin_ws/src/uollibot_base/archived/: driver.bak  sense-hat-board-test.py
base_ardu/catkin_ws/src/uollibot_base/launch/: start_base.launch
base_ardu/catkin_ws/src/uollibot_base/scripts/: MultiWii.py  camera.sh  driver  senseHatNode.py
base_rpi/: bashrc  history  mainpage.dox  manifest.xml
base_rpi/launch/: start_base.launch
base_rpi/scripts/: MultiWii.py  base_rpi.py  camera.sh  driver  driver_todo  robo-to-start.sh  senseHatNode.py
base_rpi/uollibot_base/: manifest.xml
base_rpi/uollibot_base/launch/: start_base.launch
base_rpi/uollibot_base/scripts/: MultiWii.py  camera.sh  driver
base_rpi_ros2/config/: joy_teleop.yaml
base_rpi_ros2/launch/: robo-to-start.sh  start_base.launch.py
base_rpi_ros2/scripts/: base_rpi_ros2.py  sense_hat_ros2.py
etc/: exports  hosts
etc/default/: gpsd
etc/systemd/system/: robo-to.service
joy_box/: NOTES  main.py  requirements.txt
joy_box/etc_mosquitto/conf.d/: joy_box.conf
joy_box/etc_systemd_system/: joy_box.service
joy_box/lcd_panel/: lcd_panel.cpp  lcd_panel.pro  lcd_panel.qml
joy_box/lcd_panel/icons/gallery/: index.theme
joy_box/lcd_panel/pages/: TelemetryGroundUnitPage.qml
