<?xml version="1.0"?>
<package>
  <name>bot_sensors</name>
  <version>0.0.1</version>
  <description>The sensors package</description>
  <maintainer email="ivar.prudnikov@gmail.com">Aivaras Prudnikovas</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>