<?xml version="1.0"?>
<package>
  <name>uollibot_base</name>
  <version>0.0.1</version>
  <description>
    This package is the hardware_interface for uollibot
  </description>
  <maintainer email="antoniosapuppo@yahoo.it">antonio s</maintainer>
  <license>BSD</license>

  <author>antonio s</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diff_drive_controller</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
